--- a/templates/graphique2.html
+++ b/templates/graphique2.html
@@ -33,7 +33,7 @@
         }
 
         // Récupération de données depuis notre API /tawarano/
-        fetch('/histogramme/')
+        fetch('/tawarano/')
           .then(response => response.json())
           .then(data => {
             drawChart(data);
